--- a/app/src/main/res/layout/fragment_product_entry.xml
+++ b/app/src/main/res/layout/fragment_product_entry.xml
@@ -23,146 +23,148 @@
                 android:layout_height="@dimen/top_app_bar_height"
                 android:fitsSystemWindows="true"
                 android:minHeight="?attr/actionBarSize"
-                app:layout_scrollFlags="scroll|enterAlways"
                 app:navigationIcon="@drawable/baseline_arrow_back_24"
                 app:menu="@menu/product_entry_top_app_bar_menu"
                 app:title="@string/new_product"
                 app:titleCentered="true" />
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/product_image"
-                android:layout_width="@dimen/entry_image_size"
-                android:layout_height="@dimen/entry_image_size"
-                android:layout_marginVertical="@dimen/padding_medium"
-                android:contentDescription="@string/new_product_image_content_desc"
-                android:src="@drawable/baseline_camera_alt_24"
-                app:contentPadding="@dimen/padding_extra_large"
-                android:scaleType="centerCrop"
-                app:layout_constraintStart_toStartOf="@id/product_number_field"
-                app:layout_constraintTop_toTopOf="parent"
-                android:background="@drawable/dashed_line_border"
-                android:backgroundTint="?attr/colorOutline"
-                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="@dimen/padding_large"
+                android:layout_marginVertical="@dimen/padding_medium">
 
-            <Button
-                android:id="@+id/add_photo_button"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/add_product_image"
-                app:layout_constraintBottom_toTopOf="@id/remove_photo_button"
-                app:layout_constraintEnd_toEndOf="@id/remove_photo_button"
-                app:layout_constraintStart_toStartOf="@id/remove_photo_button"
-                app:layout_constraintTop_toTopOf="@id/product_image" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/product_image"
+                    android:layout_width="@dimen/entry_image_size"
+                    android:layout_height="@dimen/entry_image_size"
+                    android:contentDescription="@string/new_product_image_content_desc"
+                    android:src="@drawable/baseline_camera_alt_24"
+                    app:contentPadding="@dimen/padding_extra_large"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintStart_toStartOf="@id/product_number_field"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:background="@drawable/dashed_line_border"
+                    android:backgroundTint="?attr/colorOutline"
+                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
 
-            <Button
-                android:id="@+id/remove_photo_button"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:enabled="@{viewModel.uiState.productDetails.imageUri != null}"
-                android:text="@string/remove_product_image"
-                app:layout_constraintBottom_toBottomOf="@id/product_image"
-                app:layout_constraintEnd_toEndOf="@id/product_number_field"
-                app:layout_constraintTop_toBottomOf="@id/add_photo_button" />
+                <Button
+                    android:id="@+id/add_photo_button"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_product_image"
+                    app:layout_constraintBottom_toTopOf="@id/remove_photo_button"
+                    app:layout_constraintEnd_toEndOf="@id/remove_photo_button"
+                    app:layout_constraintStart_toStartOf="@id/remove_photo_button"
+                    app:layout_constraintTop_toTopOf="@id/product_image" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/product_number_field"
-                style="?attr/textInputOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/padding_medium"
-                android:layout_marginTop="@dimen/padding_large"
-                android:layout_marginBottom="@dimen/padding_small"
-                android:hint="@string/product_number"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/product_image"
-                app:layout_constraintWidth_max="@dimen/max_text_field_width">
+                <Button
+                    android:id="@+id/remove_photo_button"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="@{viewModel.uiState.productDetails.imageUri != null}"
+                    android:text="@string/remove_product_image"
+                    app:layout_constraintBottom_toBottomOf="@id/product_image"
+                    app:layout_constraintEnd_toEndOf="@id/product_number_field"
+                    app:layout_constraintTop_toBottomOf="@id/add_photo_button" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="number"
-                    android:maxLines="1"
-                    android:text="@{viewModel.uiState.productDetails.productNumber}" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/product_number_field"
+                    style="?attr/textInputOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/padding_large"
+                    android:layout_marginBottom="@dimen/padding_small"
+                    android:hint="@string/product_number"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/product_image"
+                    app:layout_constraintWidth_max="@dimen/max_text_field_width">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="number"
+                        android:maxLines="1"
+                        android:text="@{viewModel.uiState.productDetails.productNumber}" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/product_name_field"
-                style="?attr/textInputOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/padding_medium"
-                android:layout_marginVertical="@dimen/padding_small"
-                android:hint="@string/product_name"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/product_number_field"
-                app:layout_constraintWidth_max="@dimen/max_text_field_width">
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="text"
-                    android:maxWidth="@dimen/max_text_field_width"
-                    android:maxLines="1"
-                    android:text="@{viewModel.uiState.productDetails.productName}" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/product_name_field"
+                    style="?attr/textInputOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/padding_small"
+                    android:hint="@string/product_name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/product_number_field"
+                    app:layout_constraintWidth_max="@dimen/max_text_field_width">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="text"
+                        android:maxWidth="@dimen/max_text_field_width"
+                        android:maxLines="1"
+                        android:text="@{viewModel.uiState.productDetails.productName}" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/product_price_field"
-                style="?attr/textInputOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/padding_medium"
-                android:layout_marginVertical="@dimen/padding_small"
-                android:hint="@string/product_price"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/product_name_field"
-                app:layout_constraintWidth_max="@dimen/max_text_field_width">
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="numberDecimal"
-                    android:maxWidth="@dimen/max_text_field_width"
-                    android:maxLines="1"
-                    android:text="@{viewModel.uiState.productDetails.price}" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/product_price_field"
+                    style="?attr/textInputOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/padding_small"
+                    android:hint="@string/product_price"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/product_name_field"
+                    app:layout_constraintWidth_max="@dimen/max_text_field_width">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="numberDecimal"
+                        android:maxWidth="@dimen/max_text_field_width"
+                        android:maxLines="1"
+                        android:text="@{viewModel.uiState.productDetails.price}" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/product_stock_field"
-                style="?attr/textInputOutlinedStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/padding_medium"
-                android:layout_marginVertical="@dimen/padding_small"
-                android:hint="@string/product_stock"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/product_price_field"
-                app:layout_constraintWidth_max="@dimen/max_text_field_width">
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="number"
-                    android:text="@{viewModel.uiState.productDetails.stock}" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/product_stock_field"
+                    style="?attr/textInputOutlinedStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/padding_small"
+                    android:hint="@string/product_stock"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/product_price_field"
+                    app:layout_constraintWidth_max="@dimen/max_text_field_width">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="number"
+                        android:text="@{viewModel.uiState.productDetails.stock}" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
